--- a/badchats/templates/recordcheck.html
+++ b/badchats/templates/recordcheck.html
@@ -13,28 +13,12 @@
       </thead>
       <tbody>
         <tr>
-          <td>1</td>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
+        {% for record in records %}
+          <td><p>{{ record }}<p></td>
         </tr>
-        <tr>
-          <td>2</td>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-        </tr>
+       {% endfor %}
       </tbody>
     </table>
   </div>
 </div>
 {% endblock %}
-
-
-
