--- a/adminweb/static/css/other.css
+++ b/adminweb/static/css/other.css
@@ -22,3 +22,43 @@
 }
 
 
+.table-name-fonts-1, .table-name-fonts-2  {
+    font-size: 20px;
+    font-family: ModernKing, 'Source Sans Pro','Helvetica Neue','Helvetica','Arial','sans-serif';
+    text-align: left;
+}
+
+.table-name-fonts-2 { 
+	font-size: 20px;
+}
+
+.font-color-red {
+	color: #000;
+}
+
+@font-face
+{
+	font-family: 'ModernKing';
+	src: url('../fonts/Modern_King.ttf');
+}
+
+.vertical-align-center 
+{/* To center vertically */
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.vertical-alignment-helper 
+{ 
+	display:table; 
+	height: 100%; 
+	width: 100%; 
+}
+
+.modal-content {
+    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+    width:inherit;
+    height:inherit;
+    /* To center horizontally */
+    margin: 25%;
+}
