--- a/adminweb/templates/header.html
+++ b/adminweb/templates/header.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="{{ static_url("dist/css/AdminLTE.min.css") }}">
 <script src="{{ static_url("plugins/jQuery/jquery-2.2.3.min.js") }}"></script>
 <script src="{{ static_url("bootstrap/js/bootstrap.min.js") }}"></script>
+<script src="{{ static_url("js/bootstrap-notify.min.js") }}"></script>
 <!-- iCheck -->
 <!-- <link rel="stylesheet" href="{{ static_url("plugins/iCheck/square/blue.css") }}"> -->
 {% block head %}{% end %}
