--- a/adminweb/templates/main.html
+++ b/adminweb/templates/main.html
@@ -2,7 +2,7 @@
 <html>
 {% include "header.html" %}
 <!-- <body class="hold-transition login-page" style="background:url({{ static_url("picture/KPXQ_1014.jpg") }});"> -->
-<body class="hold-transition skin-blue sidebar-mini" >
+<body class="hold-transition skin-blue sidebar-mini sidebar-collapse" > <!--   --!>
 {% include "nav.html" %}
 {% block body %}{% end %}
 </body>
