--- a/adminweb/templates/nav.html
+++ b/adminweb/templates/nav.html
@@ -3,9 +3,9 @@
     <!-- Logo -->
     <a href="#" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>O</b>ps</span>
+      <span class="logo-mini"><b>D</b></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>OPS</b>Tools</span>
+      <span class="logo-lg"><b>DNS</b>Tools</span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li class="treeview">
-          <a href="/zones">
+          <a href="/zones" >
             <i class="fa  fa-paper-plane-o"></i> <span>Zone 列表</span>
           </a>
         </li>
