--- a/adminweb/templates/login.html
+++ b/adminweb/templates/login.html
@@ -31,7 +31,7 @@
 <!-- <img src="{{ static_url("picture/KPXQ_1014.jpg") }}" style="visibility: visible; animation-name: fadeIn;" alt=""></img> -->
 <div class="login-box" >
   <div class="login-logo">
-    <a href="#" ><b>OPS</b>Tools</a>
+    <a href="#" ><b>DNS</b>Tools</a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body box-shadow">
