--- a/adminweb/templates/nav.html
+++ b/adminweb/templates/nav.html
@@ -19,7 +19,7 @@
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
           <li>
-            <a href="/login" class="fa fa-sign-out"><b>LOGOUT</b></a>
+            <a href="/logout" class="fa fa-sign-out"><b>LOGOUT</b></a>
           </li>
         </ul>
       </div>
@@ -43,11 +43,13 @@
             <i class="fa fa-registered"></i> <span>域名解析</span>
           </a>
         </li>
+<!--
         <li class="treeview">
           <a href="/zones" >
             <i class="fa  fa-paper-plane-o"></i> <span>Zone 列表</span>
           </a>
         </li>
+--!>
         <li class="treeview">
           <a href="/dnsmon">
             <i class="fa fa-table"></i> <span>DNSMonitor</span>
