--- a/adminweb/templates/dnszone.html
+++ b/adminweb/templates/dnszone.html
@@ -36,19 +36,20 @@
 	  	<div class="col-xs-2">
 			{% include "dnszone_secnav.html"%}
 		</div>
-        <div class="col-xs-7">
-          <div class="box">
+        <div class="col-xs-9">
+          <div class="box box-solid box-primary">
             <div class="box-header">
-              <h3 class="box-title">Record List</h3>
+              <h3 id="domainTitle" class="box-title table-name-fonts-1"><b>RECORD LIST</b></h3>
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <table id="monTable" class="table table-bordered table-striped">
+              <table id="zoneTable" class="table table-bordered table-striped " > <!--  text-center --!>
 			  	<thead>
 			  	<tr>
 					<th>Zone ID</th>
 					<th>Zone Name</th>
 					<th>Zone Group</th>
+					<th>Zone Group Name</th>
 					<th>Description</th>
 				</tr>
 				</thead>
@@ -57,7 +58,7 @@
             <!-- /.box-body -->
           </div>
           <!-- /.box -->
-        </div>
+           </div>
         <!-- /.col -->
       </div>
       <!-- /.row -->
