--- a/adminweb/templates/dnszone_secnav.html
+++ b/adminweb/templates/dnszone_secnav.html
@@ -1,13 +1,21 @@
-<div class="box box-primary">
-	<div class="box-header with-border">
-	  <h3 class="box-title">Group List</h3>
-	  <div class="box-tools pull-right">
-	  	<a class="uppercase"><i class="glyphicon glyphicon-chevron-left"></i></a>
-	  </div>
+<div class="box box-widget widget-user-2">
+<div class="small-box bg-blue">
+            <div class="inner">
+              <h3 ><i id="zone_num"></i> <i class="table-name-fonts-1 odometer"style="font-size:15px;">records</i></h3>
+              <sup class="table-name-fonts-1" style="font-size:20px;">ZONE GROUP</sup>
+            </div>
+            <div class="icon">
+				<a class="icon icon-bag"><i class="fa fa-globe"></i></a>
+            </div>
+          </div>
+	<div class="box-header with-border" style="background-color:#fff;">
+		<div class="has-feedback">
+        	<input id='zoneGroupSearch' type="text" class="form-control input-sm" placeholder="Search...">
+        	<span class="glyphicon glyphicon-search form-control-feedback"></span>
+		</div>
 	</div>
 	<div class="box-body">
-		<ul class="nav nav-pills nav-stacked">
-			<li><a href="#">default</a></li>
+		<ul id='zoneGroupList' class="nav nav-pills nav-stacked">
 		</ul>
 	</div>
 </div>
