--- a/adminweb/templates/nav.html
+++ b/adminweb/templates/nav.html
@@ -43,6 +43,11 @@
             <i class="fa fa-registered"></i> <span>域名解析</span>
           </a>
         </li>
+        <li class="treeview">
+          <a href="/aqb">
+            <i class="fa fa-adn"></i> <span>安全宝</span>
+          </a>
+        </li>
 <!--
         <li class="treeview">
           <a href="/zones" >
