--- a/adminweb/templates/aqb_secnav.html
+++ b/adminweb/templates/aqb_secnav.html
@@ -3,10 +3,10 @@
 	  <h3 class="box-title"><b>记录信息</b></h3>
 	</div>
 	<div class="box-body" style="height: 500px;">
-		<div class="col-md-5 col-md-offset-1">
+		<!--<div class="col-md-12"> --!>
 			<div id="aqb_message">
 			</div>
-		</div>
+		<!--</div> --!>
 	</div>
 </div>
 
