--- a/adminweb/templates/aqb_secnav.html
+++ b/adminweb/templates/aqb_secnav.html
@@ -1,3 +1,26 @@
+<div class="box box-widget widget-user box-solid">
+	<div class="box-footer">
+	  <div class="row">
+	    <div class="col-sm-6 border-right">
+	      <div class="description-block">
+	        <h1 id="frontend_ngx" class="description-header" style="font-size: 50px;color: rgb(60, 141, 188);">0</h1>
+	        <span class="description-text">FRONTEND NGX</span>
+	      </div>
+	      <!-- /.description-block -->
+	    </div>
+	    <div class="col-sm-6">
+	      <div class="description-block">
+	        <h3 id="aqb_ngx" class="description-header" style="font-size: 50px;color: rgb(60, 141, 188);">0</h3>
+	        <span class="description-text">AQB NGX</span>
+	      </div>
+	      <!-- /.description-block -->
+	    </div>
+	    <!-- /.col -->
+	  </div>
+	  <!-- /.row -->
+	</div>
+</div>
+
 <div class="box box-primary box-solid">
 	<div class="box-header with-border ">
 	  <h3 class="box-title"><b>记录信息</b></h3>
