1.上线安全宝切换,添加功能.\n 2.本地修改url功能上线. 3.安全宝切换时会自动获取抗D主机后端机器列表并尝试访问, 状态正常时才会切换.

--- a/adminweb/templates/aqb.html
+++ b/adminweb/templates/aqb.html
@@ -53,9 +53,10 @@
 					<th>sub_domain</th>
 					<th>type</th>
 					<th>value</th>
+					<th>url</th>
 					<th>zone_name</th>
 					<th>status</th>
-					<th>安全宝</th>
+					<th>aqb</th>
 					<th>操作</th>
 				</tr>
 				</thead>
@@ -70,6 +71,7 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
+  {% include "aqb_modal.html" %}
   {% include "footer.html" %}
 </div>
 
